--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,7 @@
 	<testsuites>
 		<testsuite>
 			<directory prefix="test-" suffix=".php">./tests/</directory>
-			</testsuite>
+			<exclude>./tests/test-sample.php</exclude>
+		</testsuite>
 	</testsuites>
 </phpunit>
