--- a/composer.json
+++ b/composer.json
@@ -2,4 +2,9 @@
     "require": {
         "brain/monkey": "2.*"
     }
-}
+},
+"scripts" : {
+    "unit-tests": "phpunit --testsuite=unit",
+    "wp-install": "bash ./bin/install-docker.sh",
+    "wp-tests": "docker-compose run --rm wordpress_phpunit phpunit --configuration phpunit-integration.xml.dist",
+},
