--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,5 @@
 "scripts" : {
     "unit-tests": "phpunit --testsuite=unit",
     "wp-install": "bash ./bin/install-docker.sh",
-    "wp-tests": "docker-compose run --rm wordpress_phpunit phpunit --configuration phpunit-integration.xml.dist",
-},
+    "wp-tests": "docker-compose run --rm wordpress_phpunit phpunit --configuration phpunit-integration.xml.dist"
+}
