--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,10 @@ script:
   # Run just unit tests first -- if they fail we never spend the time building the environment for integration tests
   - composer unit-tests
 
+  - |
+  bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  composer global require "phpunit/phpunit=4.8.*|5.7.*"
+
   # Run integration tests
   - composer wp-tests
 
