--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,18 @@ script:
   # Run just unit tests first -- if they fail we never spend the time building the environment for integration tests
   - composer unit-tests
 
+  - |
+    if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
+      phpenv config-rm xdebug.ini
+    else
+      echo "xdebug.ini does not exist"
+    fi
+  - |
+    if [[ ! -z "$WP_VERSION" ]] ; then
+      bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+      composer global require "phpunit/phpunit=4.8.*|5.7.*"
+    fi
+
   # Run integration tests
   - composer wp-tests
 
