--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <phpunit
-	bootstrap="tests/bootstrap.php"
+	bootstrap="tests/unit/bootstrap.php"
 	backupGlobals="false"
 	colors="true"
 	convertErrorsToExceptions="true"
@@ -9,7 +9,7 @@
 	>
 	<testsuites>
 		<testsuite name="unit" >
-			<directory prefix="test-unit" suffix=".php">./tests/</directory>
+			<file>./tests/unit/test-unit-plugin.php</file>
 		</testsuite>
 	</testsuites>
 </phpunit>
